css: fix cube alignment
fixes #3

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -24,7 +24,6 @@ div.cube {
     height: 10em;
     margin: 0;
     padding: 0.2em;
-    margin-right: 0.3em;
     margin-top: 0.3em;
     overflow: hidden;
     border: 1px solid white;
